// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`top-scope transforms correctly using "top-scope-0" data 1`] = `
"const test = 'me';
module.exports = {}
"
`;

exports[`top-scope transforms correctly using "top-scope-1" data 1`] = `
"const webpack = require(\\"webpack\\");

module.exports = {}
"
`;
